# simpledevelop

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  callbacks.h  expand-tree.c  main.c  org.xnsc.simpledevelop.gresource.xml  org.xnsc.simpledevelop.gschema.xml  preferences.ui  project-tree.c  project-tree.h  sd-application-window.c  sd-application-window.h  sd-application.c  sd-application.h  sd-editor.c  sd-editor.h  sd-preferences.c  sd-preferences.h  sd-project-tree.c  sd-project-tree.h  sd-window.c  sd-window.h  simpledevelop.desktop.in  window.glade
